# customer_segmentation_bank_term_deposits

./: README.md  logistic.pkl  model_development.ipynb  pyproject.toml  randomForest.pkl  svm.pkl  xgboost.pkl
data cleaning and preprocessing/: data_cleaning_methods.py
my-app/: app.py  requirements.txt
raw_data/: file.py
