[tool.poetry]
name = "customer-segmentation-bank-term-deposits"
version = "0.1.0"
description = "Clustering bank customers"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.2"
numpy = "^2.4.4"
scikit-learn = "^1.8.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
