[tool.poetry]
name = "customer-segmentation-bank-term-deposits"
version = "0.1.0"
description = "Clustering bank customers"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.4"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
tensorflow = "2.15"
scikeras = "0.12"
statsmodels = "^0.14.6"
xgboost = "^3.2.0"
lxml = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]